--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.9",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -32,6 +33,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
+    "faker": "^5.5.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
